examples/test/testpolicy9768.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9768
  namespace: namespace402
spec:
  podSelector:
    matchLabels:
      key6: value40
      key3: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value27
          key33: value47
      podSelector:
        matchLabels:
          key38: value41
          key15: value0
